--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ author: "David Jansen"
 ![Banner](path/to/your/image.jpg)
 
 sghafdhj asdfggashf ghasfdha
-![](images/profile.jpg){fig-align="center" width="1020" height="402"}
+![](figures/profile.jpg){fig-align="center" width="1020" height="402"}
 
 
 The site is created with Rstudio and Quarto (<https://quarto.org/docs/websites>).
