--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,9 @@
 ---
-title: "Workshops"
+title: "Workshop overview"
 author: "David Jansen"
 ---
 ![Banner](path/to/your/image.jpg)
 
-sghafdhj asdfggashf ghasfdha
 ![](figures/profile.jpg){fig-align="center" width="1020" height="402"}
 
 
