--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Workshop for MCEVBD!!"
+title: "Workshop for MCEVBD!!!"
 author: "David Jansen"
 ---
 ![Banner](path/to/your/image.jpg)
