--- a/index.qmd
+++ b/index.qmd
@@ -3,9 +3,6 @@ title: "Workshop for MCEVBD!!"
 author: "David Jansen"
 ---
 
-![Banner](images/sunset.jpg)
-
-![](images/profile.jpg){fig-align="center" width="1020" height="402"}
-
+![](images/sunset.jpg)
 
 The site is created with Rstudio and Quarto (<https://quarto.org/docs/websites>).
