--- a/qmd_files/index.qmd
+++ b/qmd_files/index.qmd
@@ -3,6 +3,7 @@ title: "Workshop for MCEVBD!!"
 author: "David Jansen"
 ---
 Can I compile this with a Dockerfile
+Come on you can do this!
 
 ![](../images/sunset.jpg)
 
