--- a/qmd_files/index.qmd
+++ b/qmd_files/index.qmd
@@ -4,6 +4,7 @@ author: "David Jansen"
 ---
 Can I compile this with a Dockerfile
 Come on you can do this!
+Can I find tidyverse?
 
 ![](../images/sunset.jpg)
 
