--- a/qmd_files/index.qmd
+++ b/qmd_files/index.qmd
@@ -5,6 +5,7 @@ author: "David Jansen"
 Can I compile this with a Dockerfile
 Come on you can do this!
 Can I find tidyverse?
+WHere is it?
 
 ![](../images/sunset.jpg)
 
