forced index change

--- a/qmd_files/index.qmd
+++ b/qmd_files/index.qmd
@@ -2,7 +2,7 @@
 title: "Workshop for MCEVBD!!"
 author: "David Jansen"
 ---
-come on docker where are you?
+I found you docker!
 
 ![](../images/sunset.jpg)
 
