Your commit message

--- a/qmd_files/publications.bib
+++ b/qmd_files/publications.bib
@@ -1,4 +1,4 @@
-@article{jansen2007optimisation,
+@article{jansen2007,
   title={Optimisation or satiation, testing diet selection rules in goats},
   author={{\textbf{Jansen, David A}} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
   journal={Small Ruminant Research},
