updated pub list

--- a/qmd_files/publications.bib
+++ b/qmd_files/publications.bib
@@ -1,3 +1,25 @@
+@phdthesis{jansen2003thesis,
+  title={The contribution of floodplains to the ecology of large herbivores},
+  author={{\textbf{Jansen, David A}}},
+  year={2013},
+  school={University of Wageningen}
+}
+@phdthesis{jansen2005intern,
+  title={Self-organising spatial patterns in mussel beds.},
+  author={{\textbf{Jansen, David A}}},
+  year={2013},
+  school={University of Wageningen}
+}
+@phdthesis{jansen2005thesis,
+  title={Diet selection of goats: - a feeding trial experiment},
+  author={{\textbf{Jansen, David A}}},
+  year={2013},
+  school={University of Wageningen}
+}
+
+
+
+
 @article{jansen2007,
   title={Optimisation or satiation, testing diet selection rules in goats},
   author={{\textbf{Jansen, David A}} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
