hopefully fix pub issue

--- a/qmd_files/publications.bib
+++ b/qmd_files/publications.bib
@@ -58,6 +58,31 @@
   school={University of Zurich}
 }
 
+
+@phdthesis{jansen2003thesis,
+  title={The contribution of floodplains to the ecology of large herbivores.},
+  author={{\textbf{Jansen, David A}}},
+  year={2003},
+  school={University of Wageningen}
+}
+
+@phdthesis{jansen2005intern,
+  title={Self-organising spatial patterns in mussel beds.},
+  author={{\textbf{Jansen, David A}}},
+  year={2013},
+  school={University of Wageningen}
+}
+
+@phdthesis{jansen2005thesis,
+  title={Diet selection in goats.},
+  author={{\textbf{Jansen, David A}}},
+  year={2013},
+  school={University of Wageningen}
+}
+
+
+
+
 @incollection{manser2014,
   title={Vocal complexity in meerkats and other mongoose species},
   author={Manser, Marta B and Jansen, {\textbf{Jansen, David A}} and Graw, Beke and Holl{\'e}n, Linda I and Bousquet, Christophe AH and Furrer, Roman D and Le Roux, Aliza},
@@ -68,7 +93,7 @@
   publisher={Academic Press}
 }
 
-@article{townsend2017exorcising,
+@article{townsend2017,
   title={Exorcising G rice's ghost: An empirical approach to studying intentional communication in animals},
   author={Townsend, Simon W and Koski, Sonja E and Byrne, Richard W and Slocombe, Katie E and Bickel, Balthasar and Boeckle, Markus and Braga Goncalves, Ines and Burkart, Judith M and Flower, Tom and Gaunet, Florence and others},
   journal={Biological Reviews},
@@ -79,7 +104,7 @@
   publisher={Blackwell Publishing Ltd Oxford, UK}
 }
 
-@article{akinyi2019costs,
+@article{akinyi2019,
   title={Costs and drivers of helminth parasite infection in wild female baboons},
   author={Akinyi, Mercy Y and {\textbf{Jansen, David A}}nd Habig, Bobby and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
   journal={Journal of Animal Ecology},
@@ -89,7 +114,7 @@
   year={2019}
 }
 
-@article{habig2019multi,
+@article{habig2019,
   title={Multi-scale predictors of parasite risk in wild male savanna baboons (Papio cynocephalus)},
   author={Habig, Bobby and {\textbf{Jansen, David A}} and Akinyi, Mercy Y and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
   journal={Behavioral Ecology and Sociobiology},
@@ -99,7 +124,7 @@
   publisher={Springer Berlin Heidelberg}
 }
 
-@inproceedings{grieneisen2020heritability,
+@inproceedings{grieneisen2020,
   title={HERITABILITY OF THE GUT MICROBIOME IN WILD BABOONS (PAPIO CYNOCEPHALUS)},
   author={Grieneisen, L and Dasari, M and Gould, TJ and Bjork, JR and Grenier, J and Yotova, V and Jansen, D and Gottel, N and Gilbert, JA and Barreiro, L and others},
   booktitle={AMERICAN JOURNAL OF PRIMATOLOGY},
@@ -108,7 +133,7 @@
   organization={WILEY 111 RIVER ST, HOBOKEN 07030-5774, NJ USA}
 }
 
-@article{grieneisen2021gut,
+@article{grieneisen2021,
   title={Gut microbiome heritability is nearly universal but environmentally contingent},
   author={Grieneisen, Laura and Dasari, Mauna and Gould, Trevor J and Bj{\"o}rk, Johannes R and Grenier, Jean-Christophe and Yotova, Vania and {\textbf{Jansen, David A}}nd Gottel, Neil and Gordon, Jacob B and Learn, Niki H and others},
   journal={Science},
@@ -119,7 +144,7 @@
   publisher={American Association for the Advancement of Science}
 }
 
-@article{bjork2022synchrony,
+@article{bjork2022,
   title={Synchrony and idiosyncrasy in the gut microbiome of wild baboons},
   author={Bj{\"o}rk, Johannes R and Dasari, Mauna R and Roche, Kim and Grieneisen, Laura and Gould, Trevor J and Grenier, Jean-Christophe and Yotova, Vania and Gottel, Neil and {\textbf{Jansen, David A}}nd Gesquiere, Laurence R and others},
   journal={Nature ecology \& evolution},
@@ -130,7 +155,7 @@
   publisher={Nature Publishing Group UK London}
 }
 
-@article{gordon2022ordinal,
+@article{gordon2022,
   title={Ordinal dominance rank assignments: protocol for the Amboseli Baboon Research Project},
   author={Gordon, Jacob B and {\textbf{Jansen, David A}}nd Learn, Niki H and Alberts, Susan C},
   journal={Avaialable at: https://amboselibaboons. nd. edu/downloads/, Accessed Feb},
@@ -139,7 +164,7 @@
   year={2022}
 }
 
-@article{roche2023universal,
+@article{roche2023,
   title={Universal gut microbial relationships in the gut microbiome of wild baboons},
   author={Roche, Kimberly E and Bjork, Johannes R and Dasari, Mauna R and Grieneisen, Laura and {\textbf{Jansen, David A}}nd Gould, Trevor J and Gesquiere, Laurence R and Barreiro, Luis B and Alberts, Susan C and Blekhman, Ran and others},
   journal={Elife},
