--- a/qmd_files/publications.qmd
+++ b/qmd_files/publications.qmd
@@ -8,13 +8,14 @@ bibliography: publications.bib
 
 ---
 nocite: |
-  @jansen2007,  @jansen20012,@jansen2023,  @manser2014, @townsend2017, @akinyi2019,
-  @habig2019, @grieneisen2020, @grieneisen2021, @bjork2022 @gordon2022, @roche2023
+  @jansen2007, @jansen2012, @manser2014, @townsend2017, @akinyi2019,
+  @habig2019, @grieneisen2020, @grieneisen2021, @bjork2022, @gordon2022, @roche2023
 ---
 
 # Thesis
+
 ---
 nocite: |
-  @jansen2003thesis, @jansen2015intern,
-  @jansen2015thesis,thesis@jansen2013thesis
+  @jansen2003thesis, @jansen2005intern,
+  @jansen2005thesis, @jansen2013thesis
 ---
