fix bib library

--- a/qmd_files/publications.bib
+++ b/qmd_files/publications.bib
@@ -17,10 +17,7 @@
   school={University of Wageningen}
 }
 
-
-
-
-@article{jansen2007,
+ @article{jansen2007,
   title={Optimisation or satiation, testing diet selection rules in goats},
   author={{\textbf{Jansen, David A}} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
   journal={Small Ruminant Research},
@@ -41,7 +38,7 @@
   publisher={BioMed Central}
 }
 
-@article{jansen2013,
+@phdthesis{jansen2013,
   title={Testing for vocal individual discrimination in adult banded mongooses},
   author={{\textbf{Jansen, David A}} and Cant, Michael A and Manser, Marta B},
   journal={Journal of Zoology},
