trying to fix nocite issue

--- a/qmd_files/publications.qmd
+++ b/qmd_files/publications.qmd
@@ -6,13 +6,14 @@ bibliography: publications.bib
 
 # Articles
 
+## Articles
 ---
 nocite: |
   @jansen2007, @jansen2012, @jansen2013,@manser2014, @townsend2017, @akinyi2019,
   @habig2019, @grieneisen2020, @grieneisen2021, @bjork2022, @gordon2022, @roche2023
 ---
 
-# Thesis
+## Thesis
 
 ---
 nocite: |
