--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,6 @@ title: "David Jansen"
 author: "David Jansen"
 ---
 
-![](../images/sunset.jpg)
+![](./images/sunset.jpg)
 
 The site is created with Rstudio and Quarto (<https://quarto.org/docs/websites>).
