--- a/presentations/MCEVBD_interview.qmd
+++ b/presentations/MCEVBD_interview.qmd
@@ -1,13 +1,12 @@
 ---
 title: "MCEVBD job interview"
-author: "David Jansen"
 format: revealjs
 ---
 
 ::: {#fig-RefCardR}
 
-<!-- <iframe width="100%" height="600" src="./MCEVBD_interview/MCEVBD_presentation.pdf"></iframe> -->
-{{< pdf ./MCEVBD_interview/MCEVBD_presentation.pdf >}}
+<iframe width="100%" height="600" src="./MCEVBD_interview/MCEVBD_presentation.pdf"></iframe>
+<!-- {{< pdf ./MCEVBD_interview/MCEVBD_presentation.pdf >}} -->
 :::
 
-This presentation was made with LaTeX. The raw code can be found [here](./MCEVBD_interview/JansenD_presentation.Rtex)
+This presentation was made with LaTeX. The raw code can be found [here](./MCEVBD_interview/JansenD_presentation.Rtex).
