--- a/other/CV.qmd
+++ b/other/CV.qmd
@@ -1,11 +1,9 @@
 ---
 about:
   template: jolla
-  image: ./images/djansen.jpg
-  links:
-    - icon: github
-      text: Github
-      href: https://github.com/david-awam-jansen
 ---
 
-Click here for my <a href="./files/David_Jansen_Resume.pdf">Resume</a> or <a href="./files/David_Jansen_CV.pdf">CV</a>
+  <iframe src="./files/David_Jansen_CV.pdf" style="width:100%; height:100%;" frameborder="0" scrolling="no"></iframe>
+</div>
+
+The LaTeX code that was used to create this CV van be found <a href="./files/djansen_cv.tex">here</a>.
