--- a/other/CV.qmd
+++ b/other/CV.qmd
@@ -3,7 +3,7 @@ about:
   template: jolla
 ---
 
-  <iframe src="./files/David_Jansen_CV.pdf" style="width:100%; height:100%;" frameborder="0" scrolling="no"></iframe>
+  <iframe src="../files/David_Jansen_CV.pdf" style="width:100%; height:100%;" frameborder="0" scrolling="no"></iframe>
 </div>
 
 The LaTeX code that was used to create this CV van be found <a href="./files/djansen_cv.tex">here</a>.
