--- a/other/CV.qmd
+++ b/other/CV.qmd
@@ -1,17 +1,11 @@
 ---
 about:
   template: jolla
-  image: ./images/djansen.jpg
-  links:
-    - icon: github
-      text: Github
-      href: https://github.com/david-awam-jansen
 ---
 
-The LaTeX code that was used to create this CV can be found [here](./files/djansen_cv.tex).
 
-Click here to view my [Resume](../files/David_Jansen_Resume.pdf) or [CV](#cv).
-
-<div id="cv" style="width:100%; height:800px;">
-  <iframe src="../files/David_Jansen_CV.pdf" style="width:100%; height:100%;" frameborder="0" scrolling="no"></iframe>
+<div id="cv" style="width:100%; text-align:center;">
+  <iframe src="../files/David_Jansen_CV.pdf" style="width:80%; height:10in; margin: 0 auto;" frameborder="0" scrolling="no"></iframe>
 </div>
+
+The LaTeX code that was used to create this CV can be found [here](./files/djansen_cv.tex).
