add latex to qmd file

--- a/publications.bib
+++ b/publications.bib
@@ -122,9 +122,9 @@
 }
 
 @inproceedings{grieneisen2020,
-  title={HERITABILITY OF THE GUT MICROBIOME IN WILD BABOONS (PAPIO CYNOCEPHALUS)},
+  title={Heritability of the gut microbiome in wild baboons (Papio cynocephalus)},
   author={Grieneisen, L and Dasari, M and Gould, TJ and Bjork, JR and Grenier, J and Yotova, V and Jansen, D and Gottel, N and Gilbert, JA and Barreiro, L and others},
-  booktitle={AMERICAN JOURNAL OF PRIMATOLOGY},
+  booktitle={American Journal of Primatology}, 
   volume={82},
   year={2020},
   organization={WILEY 111 RIVER ST, HOBOKEN 07030-5774, NJ USA}
