--- a/publications.qmd
+++ b/publications.qmd
@@ -2,7 +2,7 @@
 title: "Publications list"
 bibliography: publications.bib
 csl: nature.csl
-bibliography-style: custom.bst
+bibliography-style: styles/custom.bst
 ---
 
 ---
