--- a/publications.qmd
+++ b/publications.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Publications list"
 bibliography: publications.bib
+csl: styles/nature.csl
 bibliography-style: styles/custom.bst
 ---
 
