--- a/publications.qmd
+++ b/publications.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Publications list"
 bibliography: publications.bib
-csl: styles/nature.csl
+csl: styles/apa-cv.csl
 bibliography-style: styles/custom.bst
 ---
 
