trying to add bold

--- a/publications.bib
+++ b/publications.bib
@@ -143,7 +143,7 @@
 
 @article{bjork2022,
   title={Synchrony and idiosyncrasy in the gut microbiome of wild baboons},
-  author={Bj{\"o}rk, Johannes R and Dasari, Mauna R and Roche, Kim and Grieneisen, Laura and Gould, Trevor J and Grenier, Jean-Christophe and Yotova, Vania and Gottel, Neil and {\textbf{Jansen, David A}}nd Gesquiere, Laurence R and others},
+  author={Bj{\"o}rk, Johannes R and Dasari, Mauna R and Roche, Kim and Grieneisen, Laura and Gould, Trevor J and Grenier, Jean-Christophe and Yotova, Vania and Gottel, Neil and {\textbf{Jansen, David A}} and Gesquiere, Laurence R and others},
   journal={Nature ecology \& evolution},
   volume={6},
   number={7},
