--- a/publications.qmd
+++ b/publications.qmd
@@ -1,15 +1,8 @@
 ---
 title: "Publications list"
-bibliography: publications.json
-section-bibs-bibliography: publications.json
-csl: styles/apa-cv.csl
+bibliography: publications.bib
+csl: styles/apa-cv-short.csl
 bibliography-style: styles/custom.bst
-filters:
-  - section-bibliographies
-  - bold-author.lua
-bold-auth-name:
-  - family: Jansen
-    given: D.
 ---
 
 ---
