fixed bib syntax error

--- a/publications.bib
+++ b/publications.bib
@@ -117,7 +117,7 @@
 
 @article{habig2019,
   title={Multi-scale predictors of parasite risk in wild male savanna baboons (Papio cynocephalus)},
-  author={Habig, Bobby and {\showme{Jansen, D. A.}}} and Akinyi, Mercy Y and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
+  author={Habig, Bobby and {\showme{Jansen, D. A.}} and Akinyi, Mercy Y and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
   journal={Behavioral Ecology and Sociobiology},
   volume={73},
   pages={1--16},
