fixed bib syntax error2

--- a/publications.bib
+++ b/publications.bib
@@ -4,26 +4,26 @@
 
 @phdthesis{jansen2003thesis,
   title={The contribution of floodplains to the ecology of large herbivores},
-  author={{\showme{Jansen, David A}}},
+  author={\showme{Jansen, David A}},
   year={2013},
   school={University of Wageningen}
 }
 @phdthesis{jansen2005intern,
   title={Self-organising spatial patterns in mussel beds.},
-  author={{\showme{Jansen, David A}}},
+  author={\showme{Jansen, David A}},
   year={2013},
   school={University of Wageningen}
 }
 @phdthesis{jansen2005thesis,
   title={Diet selection of goats: - a feeding trial experiment},
-  author={{\showme{Jansen, David A}}},
+  author={\showme{Jansen, David A}},
   year={2013},
   school={University of Wageningen}
 }
 
  @article{jansen2007,
   title={Optimisation or satiation, testing diet selection rules in goats},
-  author={{\showme{Jansen, David A}} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
+  author={\showme{Jansen, David A}} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
   journal={Small Ruminant Research},
   volume={73},
   number={1-3},
@@ -34,7 +34,7 @@
 
 @article{jansen2012,
   title={Segmental concatenation of individual signatures and context cues in banded mongoose (Mungos mungo) close calls},
-  author={{\showme{Jansen, David A}} and Cant, Michael A and Manser, Marta B},
+  author={\showme{Jansen, David A}} and Cant, Michael A and Manser, Marta B},
   journal={BMC biology},
   volume={10},
   pages={1--11},
@@ -44,7 +44,7 @@
 
 @phdthesis{jansen2013,
   title={Testing for vocal individual discrimination in adult banded mongooses},
-  author={{\showme{Jansen, David A}} and Cant, Michael A and Manser, Marta B},
+  author={\showme{Jansen, David A} and Cant, Michael A and Manser, Marta B},
   journal={Journal of Zoology},
   volume={291},
   number={3},
@@ -54,7 +54,7 @@
 
 @phdthesis{jansen2013thesis,
   title={Vocal communication in the banded mongoose (Mungos mungo)},
-  author={{\showme{Jansen, David A}}},
+  author={\showme{Jansen, David A}},
   year={2013},
   school={University of Zurich}
 }
@@ -62,21 +62,21 @@
 
 @phdthesis{jansen2003thesis,
   title={The contribution of floodplains to the ecology of large herbivores.},
-  author={{\showme{Jansen, David A}}},
+  author={\showme{Jansen, David A}},
   year={2003},
   school={University of Wageningen}
 }
 
 @phdthesis{jansen2005intern,
   title={Self-organising spatial patterns in mussel beds.},
-  author={{\showme{Jansen, David A}}},
+  author={\showme{Jansen, David A}},
   year={2013},
   school={University of Wageningen}
 }
 
 @phdthesis{jansen2005thesis,
   title={Diet selection in goats.},
-  author={{\showme{Jansen, David A}}},
+  author={\showme{Jansen, David A}},
   year={2013},
   school={University of Wageningen}
 }
@@ -86,7 +86,7 @@
 
 @incollection{manser2014,
   title={Vocal complexity in meerkats and other mongoose species},
-  author={Manser, Marta B and Jansen, {\textbf{Jansen, D. A.}} and Graw, Beke and Holl{\'e}n, Linda I and Bousquet, Christophe AH and Furrer, Roman D and Le Roux, Aliza},
+  author={Manser, Marta B and Jansen, \textbf{Jansen, D. A.} and Graw, Beke and Holl{\'e}n, Linda I and Bousquet, Christophe AH and Furrer, Roman D and Le Roux, Aliza},
   booktitle={Advances in the Study of Behavior},
   volume={46},
   pages={281--310},
@@ -107,7 +107,7 @@
 
 @article{akinyi2019,
   title={Costs and drivers of helminth parasite infection in wild female baboons},
-  author={Akinyi, Mercy Y and {\showme{Jansen, D. A.}} and Habig, Bobby and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
+  author={Akinyi, Mercy Y and \showme{Jansen, D. A.} and Habig, Bobby and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
   journal={Journal of Animal Ecology},
   volume={88},
   number={7},
@@ -117,7 +117,7 @@
 
 @article{habig2019,
   title={Multi-scale predictors of parasite risk in wild male savanna baboons (Papio cynocephalus)},
-  author={Habig, Bobby and {\showme{Jansen, D. A.}} and Akinyi, Mercy Y and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
+  author={Habig, Bobby and \showme{Jansen, D. A.} and Akinyi, Mercy Y and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
   journal={Behavioral Ecology and Sociobiology},
   volume={73},
   pages={1--16},
@@ -127,7 +127,7 @@
 
 @inproceedings{grieneisen2020,
   title={Heritability of the gut microbiome in wild baboons (Papio cynocephalus)},
-  author={Grieneisen, L and Dasari, M and Gould, TJ and Bjork, JR and Grenier, J and Yotova, V and Jansen, D and Gottel, N and Gilbert, JA and Barreiro, L and others},
+  author={Grieneisen, L and Dasari, M and Gould, TJ and Bjork, JR and Grenier, J and Yotova, V and \showme{Jansen, D. A.} and Gottel, N and Gilbert, JA and Barreiro, L and others},
   booktitle={American Journal of Primatology}, 
   volume={82},
   year={2020},
@@ -136,7 +136,7 @@
 
 @article{grieneisen2021,
   title={Gut microbiome heritability is nearly universal but environmentally contingent},
-  author={Grieneisen, Laura and Dasari, Mauna and Gould, Trevor J and Bj{\"o}rk, Johannes R and Grenier, Jean-Christophe and Yotova, Vania and {\showme{Jansen, D. A.}}}nd Gottel, Neil and Gordon, Jacob B and Learn, Niki H and others},
+  author={Grieneisen, Laura and Dasari, Mauna and Gould, Trevor J and Bj{\"o}rk, Johannes R and Grenier, Jean-Christophe and Yotova, Vania and \showme{Jansen, D. A.} and Gottel, Neil and Gordon, Jacob B and Learn, Niki H and others},
   journal={Science},
   volume={373},
   number={6551},
@@ -147,7 +147,7 @@
 
 @article{bjork2022,
   title={Synchrony and idiosyncrasy in the gut microbiome of wild baboons},
-  author={Bj{\"o}rk, Johannes R and Dasari, Mauna R and Roche, Kim and Grieneisen, Laura and Gould, Trevor J and Grenier, Jean-Christophe and Yotova, Vania and Gottel, Neil and {\showme{Jansen, D. A.}}} and Gesquiere, Laurence R and others},
+  author={Bj{\"o}rk, Johannes R and Dasari, Mauna R and Roche, Kim and Grieneisen, Laura and Gould, Trevor J and Grenier, Jean-Christophe and Yotova, Vania and Gottel, Neil and \showme{Jansen, D. A.} and Gesquiere, Laurence R and others},
   journal={Nature ecology \& evolution},
   volume={6},
   number={7},
@@ -158,7 +158,7 @@
 
 @article{gordon2022,
   title={Ordinal dominance rank assignments: protocol for the Amboseli Baboon Research Project},
-  author={Gordon, Jacob B and {\showme{Jansen, D. A.}}}nd Learn, Niki H and Alberts, Susan C},
+  author={Gordon, Jacob B and \showme{Jansen, D. A.} and Learn, Niki H and Alberts, Susan C},
   journal={Avaialable at: https://amboselibaboons. nd. edu/downloads/, Accessed Feb},
   volume={23},
   pages={2023},
@@ -167,7 +167,7 @@
 
 @article{roche2023,
   title={Universal gut microbial relationships in the gut microbiome of wild baboons},
-  author={Roche, Kimberly E and Bjork, Johannes R and Dasari, Mauna R and Grieneisen, Laura and {\showme{Jansen, D. A.}}}nd Gould, Trevor J and Gesquiere, Laurence R and Barreiro, Luis B and Alberts, Susan C and Blekhman, Ran and others},
+  author={Roche, Kimberly E and Bjork, Johannes R and Dasari, Mauna R and Grieneisen, Laura and \showme{Jansen, D. A.} and Gould, Trevor J and Gesquiere, Laurence R and Barreiro, Luis B and Alberts, Susan C and Blekhman, Ran and others},
   journal={Elife},
   volume={12},
   pages={e83152},
