final bibtex fix?

--- a/publications.bib
+++ b/publications.bib
@@ -23,7 +23,7 @@
 
  @article{jansen2007,
   title={Optimisation or satiation, testing diet selection rules in goats},
-  author={\showme{Jansen, David A}} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
+  author={\showme{Jansen, David A} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
   journal={Small Ruminant Research},
   volume={73},
   number={1-3},
