final bibtex fix??

--- a/publications.bib
+++ b/publications.bib
@@ -34,7 +34,7 @@
 
 @article{jansen2012,
   title={Segmental concatenation of individual signatures and context cues in banded mongoose (Mungos mungo) close calls},
-  author={\showme{Jansen, David A}} and Cant, Michael A and Manser, Marta B},
+  author={\showme{Jansen, David A} and Cant, Michael A and Manser, Marta B},
   journal={BMC biology},
   volume={10},
   pages={1--11},
