--- a/workshops/peer_review.qmd
+++ b/workshops/peer_review.qmd
@@ -31,9 +31,9 @@ format:
 
 -   Send to PIs
 
--   Send to collaborators
+    ![](/images/writingtips-09.jpg){width="415"}
 
--   ..... + lots of back and forth
+-   Send to co-authors (give them a heads-up)
 
 ## Don't forget
 
@@ -83,3 +83,40 @@ format:
 -   Cover letter
 
 ![](/images/writingtips-11.jpg)
+
+## Submission
+
+-   Cover letters
+
+    -   \<a href="data/paper_review/PLOS Biology_cover_letter_voc_signature_17JUL12.pdf target="\_blank"\>Example PLOS Biology\</a\>
+    -   \<a href="data/paper_review/Jansen et al_cover letter_vocal signaturer_16JUL12 target="\_blank"\>Example Current biology\</a\>
+
+-   Have everything ready in the right format
+
+    -   Sometimes figures and tables need to be different file
+
+    -   Inform co-authors they might have to sign something
+
+## Editorial review
+
+-   Check if paper fits journal's scope
+
+    -   Busy people and lots of papers
+
+        -   Importance of title, abstract, and cover letter
+
+## Editorial review
+
+-   Check if paper fits journal's scope
+
+```         
+Dear Dr. Jansen,
+
+Many thanks for your presubmission enquiry to Current Biology. Having discussed your abstract with my colleagues, I am sorry to say that we cannot encourage the submission of your paper. We appreciate the interest in the issues you are addressing, but our feeling is that the work you describe would be better suited to a rather more specialised journal than Current Biology.
+
+I am sorry not to be able to be more positive on this occasion, but thank you for considering us.
+
+Yours sincerely,
+
+Florian Maderspacher
+```
