fix path issue to paper_review files v3

--- a/workshops/peer_review.qmd
+++ b/workshops/peer_review.qmd
@@ -88,4 +88,12 @@ format:
 
 -   Cover letters
     -    [Plos Biology](../data/paper_review/plos_biology_cover_letter_voc_signature_17jul12.pdf)
+    
+## 
+
+```{pdf}
+source: "../data/paper_review/plos_biology_cover_letter_voc_signature_17jul12.pdf"
+```
+
+    
 
