fix path issue to paper_review files v4

--- a/workshops/peer_review.qmd
+++ b/workshops/peer_review.qmd
@@ -89,7 +89,7 @@ format:
 -   Cover letters
     -    [Plos Biology](../data/paper_review/plos_biology_cover_letter_voc_signature_17jul12.pdf)
     
-## 
+## submission 2
 
 ```{pdf}
 source: "../data/paper_review/plos_biology_cover_letter_voc_signature_17jul12.pdf"
