fix path issue to paper_review files v4

--- a/workshops/peer_review.qmd
+++ b/workshops/peer_review.qmd
@@ -91,6 +91,7 @@ format:
     
 ## submission 2
 
+Does this work?
 ```{pdf}
 source: "../data/paper_review/plos_biology_cover_letter_voc_signature_17jul12.pdf"
 ```
