--- a/workshops/peer_review.qmd
+++ b/workshops/peer_review.qmd
@@ -88,13 +88,4 @@ format:
 
 -   Cover letters
     -    [Plos Biology](../data/paper_review/plos_biology_cover_letter_voc_signature_17jul12.pdf)
-    
-## submission 2
-
-Does this work?
-```{pdf}
-source: "../data/paper_review/plos_biology_cover_letter_voc_signature_17jul12.pdf"
-```
-
-    
-
+    -    [Plos Biology](plos_biology_cover_letter_voc_signature_17jul12.pdf)
