--- a/workshops/peer_review.qmd
+++ b/workshops/peer_review.qmd
@@ -87,8 +87,8 @@ format:
 ## Submission
 
 -   Cover letters
-    -   [Plos Biology](../data/paper_review/plos_biology_cover_letter_voc_signature_16jul12.pdf)
-    -   [Plos one](../data/paper_review/plos_one_cover_letter_indiv_recog.pdf)
+    -   [Plos Biology](../data/paper_review/cover_letter_plos_biology_voc_signature_17jul12.pdf)
+    -   [Plos one](../data/paper_review/cover_letter_plos_one_indiv_recog.pdf)
 
 ## Submission
 
@@ -97,16 +97,50 @@ format:
 
 ## Receiving reviewer comments
 
--   Good reviewers are make your paper better
+-   Good reviewers make your paper better
 -   If rejected still look at comments and do something with them
 -   Very often major or minor revisions needed
 
-## Receiving reviwer commentsReview comments
+## Receiving reviewer comments
 
--   \[Akinti et al\](../data/paper_review/Akinti et al major revision required.pdf\]
+-   Revisions required
+    -   Read all comments first
+    -   Share with co-authors (also ask if you need help with specific comments)
+    -   Respond to all comments and keep track of changes
+    -   Generally a limited turn around period
+    -   [Jansen et al paper](../data/paper_review/review_of_BMC_paper.pdf)
+-   Rejected
+    -   Still, read all the comments
+        -   Why was the paper rejected?
+    -   Generally, still, revise paper
+    -   [Habig et al paper](../data/paper_review/Habig et al rejected.pdf)
 
--   Read all comments first
+## Respond to reviewer comments
 
--   Share with co-authors (also ask if you need help with specific comments)
+-   Respond to all comments
 
--   Respond to all comments and keep track of changes
+    -   Point by point
+
+    -   Track changes on the document
+
+    -   All co-authors should read responses and agree
+
+    -   Include a cover letter to the editor
+
+    -   Major revision [Jansen et al BMC paper](../data/paper_review/Jansen_et_al_BMC_cover_letter_response_to_review.pdf "Jansen et al BMC paper reponse")
+    
+## Proofing paper
+-   Paper is accepted
+-   Copy editors will format paper 
+    They are probrably not scientists
+-   [Jansen et al BMC paper proofing request](../data/paper_review/Proofing_request_bmc_paper.pdf)       
+-   First time you see your final paper :-)
+    - [Jansen et al BMC paper proof document](../data/paper_review/final_proof_BMC_paper_3399353257711615_Formatted.pdf)
+-   Read whole paper
+-   Check details
+    -     references
+    -     figures and tables (captions)
+    -     scientific names and notations
+    -     author names and affiliations
+- [Jansen et al BMC paper comments to proof](../data/paper_review/Proofing_request_bmc_paper_response.pdf)    
+    
