--- a/publications.bib
+++ b/publications.bib
@@ -42,7 +42,7 @@
   publisher={BioMed Central}
 }
 
-@phdthesis{jansen2013,
+@article{jansen2013,
   title={Testing for vocal individual discrimination in adult banded mongooses},
   author={\showme{Jansen, David A} and Cant, Michael A and Manser, Marta B},
   journal={Journal of Zoology},
@@ -59,32 +59,7 @@
   school={University of Zurich}
 }
 
-
-@phdthesis{jansen2003thesis,
-  title={The contribution of floodplains to the ecology of large herbivores.},
-  author={\showme{Jansen, David A}},
-  year={2003},
-  school={University of Wageningen}
-}
-
-@phdthesis{jansen2005intern,
-  title={Self-organising spatial patterns in mussel beds.},
-  author={\showme{Jansen, David A}},
-  year={2013},
-  school={University of Wageningen}
-}
-
-@phdthesis{jansen2005thesis,
-  title={Diet selection in goats.},
-  author={\showme{Jansen, David A}},
-  year={2013},
-  school={University of Wageningen}
-}
-
-
-
-
-@incollection{manser2014,
+@article{manser2014,
   title={Vocal complexity in meerkats and other mongoose species},
   author={Manser, Marta B and Jansen, \textbf{Jansen, D. A.} and Graw, Beke and Holl{\'e}n, Linda I and Bousquet, Christophe AH and Furrer, Roman D and Le Roux, Aliza},
   booktitle={Advances in the Study of Behavior},
@@ -125,6 +100,17 @@
   publisher={Springer Berlin Heidelberg}
 }
 
+@article{levy2020comparison,
+  title={A comparison of dominance rank metrics reveals multiple competitive landscapes in an animal society},
+  author={Levy, Emily J and Zipple, Matthew N and McLean, Emily and Campos, Fernando A and Dasari, Mauna and Fogel, Arielle S and Franz, Mathias and Gesquiere, Laurence R and Gordon, Jacob B and Grieneisen, Laura and others},
+  journal={Proceedings of the Royal Society B},
+  volume={287},
+  number={1934},
+  pages={20201013},
+  year={2020},
+  publisher={The Royal Society}
+}
+
 @inproceedings{grieneisen2020,
   title={Heritability of the gut microbiome in wild baboons (Papio cynocephalus)},
   author={Grieneisen, L and Dasari, M and Gould, TJ and Bjork, JR and Grenier, J and Yotova, V and \showme{Jansen, D. A.} and Gottel, N and Gilbert, JA and Barreiro, L and others},
@@ -156,6 +142,20 @@
   publisher={Nature Publishing Group UK London}
 }
 
+@article{Paietta2023,
+title = {Troubled waters: Water availability drives human-baboon encounters in a protected, semi-arid landscape},
+journal = {Biological Conservation},
+volume = {274},
+pages = {109740},
+year = {2022},
+issn = {0006-3207},
+doi = {https://doi.org/10.1016/j.biocon.2022.109740},
+url = {https://www.sciencedirect.com/science/article/pii/S0006320722002932},
+author = {Elise N. Paietta and Chelsea J. Weibel and David A. Jansen and Raphael S. Mututua and J. Kinyua Warutere and I. {Long'ida Siodi} and Laurence R. Gesquiere and Vincent Obanda and Susan C. Alberts and Elizabeth A. Archie},
+keywords = {Human-animal interactions, Semi-arid ecosystems, Human-altered landscapes, Water limitation, Ranging patterns, Baboon mortality},
+abstract = {Most animal habitats are affected by humans. While some species tolerate and even benefit from these changes, others suffer. Understanding when and how human-altered landscapes affect animal behavior, health, reproduction, and survival is essential to species management in a human-dominated world. Here we use 27 years of data on human-baboon encounters in a protected, semi-arid ecosystem in Kenya to: (i) identify spatial, environmental, and group-level predictors of baboon encounters with pastoralists; (ii) test whether human-built water sources alter baboon ranging patterns; and (iii) test if human encounters are linked to baboon survival, reproduction, and health. We find that the primary driver of human-baboon encounters is water availability. During dry periods, pastoralists migrate into baboon rangelands, leading to frequent human-baboon encounters, especially near water wells. Further, the baboons shift their ranges to encompass newly built wells and move away from abandoned, dried-up wells. Since 2006, a third of adult baboon deaths were linked to violent encounters with humans or their dogs. Human encounters were also linked to high infant mortality and parasite diversity in females (but this effect could not be disentangled from seasonal confounds). For wild baboons, life in protected, pastoralist conservancies presents a double-edged sword: human-built wells enable the baboons to access water during dry periods, but these wells lead to encounters with humans, which have become a common source of baboon mortality. Together, our results serve as a comprehensive case study of anthropogenic effects on wild primates, highlighting the complex interactions between humans and wildlife in protected areas.}
+}
+
 @article{gordon2022,
   title={Ordinal dominance rank assignments: protocol for the Amboseli Baboon Research Project},
   author={Gordon, Jacob B and \showme{Jansen, D. A.} and Learn, Niki H and Alberts, Susan C},
@@ -174,3 +174,17 @@
   year={2023},
   publisher={eLife Sciences Publications Limited}
 }
+
+
+@article{weibel2024,
+	title = {Using non-invasive behavioral and physiological data to measure biological age in wild baboons},
+	issn = {2509-2723},
+	url = {https://doi.org/10.1007/s11357-024-01157-5},
+	doi = {10.1007/s11357-024-01157-5},
+	abstract = {Biological aging is near-ubiquitous in the animal kingdom, but its timing and pace vary between individuals and over lifespans. Prospective, individual-based studies of wild animals—especially non-human primates—help identify the social and environmental drivers of this variation by indicating the conditions and exposure windows that affect aging processes. However, measuring individual biological age in wild primates is challenging because several of the most promising methods require invasive sampling. Here, we leverage observational data on behavior and physiology, collected non-invasively from 319 wild female baboons across 2402 female-years of study, to develop a composite predictor of age: the non-invasive physiology and behavior (NPB) clock. We found that age predictions from the NPB clock explained 51\% of the variation in females’ known ages. Further, deviations from the clock’s age predictions predicted female survival: females predicted to be older than their known ages had higher adult mortality. Finally, females who experienced harsh early-life conditions were predicted to be about 6 months older than those who grew up in more benign conditions. While the relationship between early adversity and NPB age is noisy, this estimate translates to a predicted 2–3 year reduction in mean adult lifespan in our model. A constraint of our clock is that it is tailored to data collection approaches implemented in our study population. However, many of the clock’s components have analogs in other populations, suggesting that non-invasive data can provide broadly applicable insight into heterogeneity in biological age in natural populations.},
+	journal = {GeroScience},
+	author = {Weibel, Chelsea J. and Dasari, Mauna R. and Jansen, David A. and Gesquiere, Laurence R. and Mututua, Raphael S. and Warutere, J. Kinyua and Siodi, Long’ida I. and Alberts, Susan C. and Tung, Jenny and Archie, Elizabeth A.},
+	month = may,
+	year = {2024},
+}
+
