updated publication list

--- a/publications.bib
+++ b/publications.bib
@@ -100,7 +100,7 @@
   publisher={Springer Berlin Heidelberg}
 }
 
-@article{levy2020comparison,
+@article{levy2020,
   title={A comparison of dominance rank metrics reveals multiple competitive landscapes in an animal society},
   author={Levy, Emily J and Zipple, Matthew N and McLean, Emily and Campos, Fernando A and Dasari, Mauna and Fogel, Arielle S and Franz, Mathias and Gesquiere, Laurence R and Gordon, Jacob B and Grieneisen, Laura and others},
   journal={Proceedings of the Royal Society B},
@@ -142,7 +142,7 @@
   publisher={Nature Publishing Group UK London}
 }
 
-@article{Paietta2023,
+@article{paietta2023,
 title = {Troubled waters: Water availability drives human-baboon encounters in a protected, semi-arid landscape},
 journal = {Biological Conservation},
 volume = {274},
@@ -156,7 +156,7 @@ keywords = {Human-animal interactions, Semi-arid ecosystems, Human-altered lands
 abstract = {Most animal habitats are affected by humans. While some species tolerate and even benefit from these changes, others suffer. Understanding when and how human-altered landscapes affect animal behavior, health, reproduction, and survival is essential to species management in a human-dominated world. Here we use 27 years of data on human-baboon encounters in a protected, semi-arid ecosystem in Kenya to: (i) identify spatial, environmental, and group-level predictors of baboon encounters with pastoralists; (ii) test whether human-built water sources alter baboon ranging patterns; and (iii) test if human encounters are linked to baboon survival, reproduction, and health. We find that the primary driver of human-baboon encounters is water availability. During dry periods, pastoralists migrate into baboon rangelands, leading to frequent human-baboon encounters, especially near water wells. Further, the baboons shift their ranges to encompass newly built wells and move away from abandoned, dried-up wells. Since 2006, a third of adult baboon deaths were linked to violent encounters with humans or their dogs. Human encounters were also linked to high infant mortality and parasite diversity in females (but this effect could not be disentangled from seasonal confounds). For wild baboons, life in protected, pastoralist conservancies presents a double-edged sword: human-built wells enable the baboons to access water during dry periods, but these wells lead to encounters with humans, which have become a common source of baboon mortality. Together, our results serve as a comprehensive case study of anthropogenic effects on wild primates, highlighting the complex interactions between humans and wildlife in protected areas.}
 }
 
-@article{gordon2022,
+@article{gordon2023,
   title={Ordinal dominance rank assignments: protocol for the Amboseli Baboon Research Project},
   author={Gordon, Jacob B and \showme{Jansen, D. A.} and Learn, Niki H and Alberts, Susan C},
   journal={Avaialable at: https://amboselibaboons. nd. edu/downloads/, Accessed Feb},
