--- a/publications.bib
+++ b/publications.bib
@@ -4,26 +4,26 @@
 
 @phdthesis{jansen2003thesis,
   title={The contribution of floodplains to the ecology of large herbivores},
-  author={\showme{Jansen, David A}},
+  author={Jansen, David A},
   year={2013},
   school={University of Wageningen}
 }
 @phdthesis{jansen2005intern,
   title={Self-organising spatial patterns in mussel beds.},
-  author={\showme{Jansen, David A}},
+  author={Jansen, David A},
   year={2013},
   school={University of Wageningen}
 }
 @phdthesis{jansen2005thesis,
   title={Diet selection of goats: - a feeding trial experiment},
-  author={\showme{Jansen, David A}},
+  author={Jansen, David A},
   year={2013},
   school={University of Wageningen}
 }
 
  @article{jansen2007,
   title={Optimisation or satiation, testing diet selection rules in goats},
-  author={\showme{Jansen, David A} and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
+  author={Jansen, David A and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
   journal={Small Ruminant Research},
   volume={73},
   number={1-3},
@@ -34,7 +34,7 @@
 
 @article{jansen2012,
   title={Segmental concatenation of individual signatures and context cues in banded mongoose (Mungos mungo) close calls},
-  author={\showme{Jansen, David A} and Cant, Michael A and Manser, Marta B},
+  author={Jansen, David A and Cant, Michael A and Manser, Marta B},
   journal={BMC biology},
   volume={10},
   pages={1--11},
@@ -44,7 +44,7 @@
 
 @article{jansen2013,
   title={Testing for vocal individual discrimination in adult banded mongooses},
-  author={\showme{Jansen, David A} and Cant, Michael A and Manser, Marta B},
+  author={Jansen, David A and Cant, Michael A and Manser, Marta B},
   journal={Journal of Zoology},
   volume={291},
   number={3},
@@ -54,7 +54,7 @@
 
 @phdthesis{jansen2013thesis,
   title={Vocal communication in the banded mongoose (Mungos mungo)},
-  author={\showme{Jansen, David A}},
+  author={Jansen, David A},
   year={2013},
   school={University of Zurich}
 }
