--- a/publications.qmd
+++ b/publications.qmd
@@ -1,12 +1,14 @@
 ---
 title: "Publications list"
 bibliography: publications.bib
-csl: styles/apa-cv.csl
+csl: styles/animal-behaviour.csl
 ---
 <!-- At some point be inspired by https://github.com/jhelvy/jhelvy_quarto/blob/main/research.qmd -->
 <!-- His page has some super cool ideas -->
 ---
-nocite: |
-  @jansen2003thesis, @jansen2005intern, @jansen2005thesis, @jansen2007, @jansen2012, @jansen2013, @jansen2013thesis, @manser2014, @townsend2017, @akinyi2019, @habig2019, @levy2020, @grieneisen2020, @grieneisen2021, @bjork2022, @gordon2023, @paietta2023, @roche2023, @weibel2024  
----
 
+
+---
+nocite: |
+  @*
+---
