--- a/publications.qmd
+++ b/publications.qmd
@@ -7,6 +7,7 @@ csl: styles/animal-behaviour.csl
 <!-- His page has some super cool ideas -->
 ---
 
+This page should have a new style.
 
 ---
 nocite: |
