--- a/publications.qmd
+++ b/publications.qmd
@@ -10,8 +10,8 @@ csl: styles/animal-behaviour.csl
 <!-- His page has some super cool ideas -->
 ---
 
-This page should have a new style.
 
+<!-- This should become a publication list -->
 ---
 nocite: |
    @jansen2003thesis, @jansen2005intern, @jansen2005thesis, @jansen2007, @jansen2012, @jansen2013, @jansen2013thesis, @manser2014, @townsend2017, @akinyi2019, @habig2019,  @levy2020, @grieneisen2020, @grieneisen2021, @bjork2022, @gordon2023, @paietta2023, @roche2023, @weibel2024
